# algorithms-programming-assignment-1

./: .clang-format  .gitignore  README.md  data.sh  experiments.sh  make_points.py  output.csv
data/: dataset0.txt  dataset1.txt  dataset2.txt  dataset3.txt  dataset4.txt  dataset5.txt
src/: CMakeLists.txt  main.cpp  tests.cpp
src/utils/: CMakeLists.txt  brute_force.cpp  brute_force.h  close.cpp  close.h  container.h  container.hpp  efficient.cpp  efficient.h  mergesort.cpp  mergesort.hpp  point.h  point.hpp  point_reader.cpp  point_reader.h  tree.h  tree.hpp
